# RAG-PDF-Parser

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  SKILL (1).md  SKILL (2).md  SKILL (3).md  SKILL (4).md  SKILL (5).md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  streamlit_viewer.py
scripts/: batch_translate.py  code_review.py  data_analysis.py  markdown_gen.py  research.py  translate_file.py
src/: config.py
src/cache/: __init__.py  persistent.py
src/captioning/: __init__.py  vlm.py
src/chart/: extractor.py
src/dedup/: __init__.py  deduplicator.py
src/evaluation/: benchmark.py
src/layout/: base_parser.py  detector.py  qwen_parser.py
src/models/: __init__.py  block.py  chunk.py
src/output/: __init__.py  writer.py
src/processing/: aggregator.py  chunking.py  heading.py  ir_processor.py  page_merger.py  scheduler.py
src/table/: extractor.py
src/text/: extractor.py
src/translation/: translator.py
templates/: analysis_report.md  blog.md  paper_summary.md
tests/: analyze_page.py  check_ppstructure.py  compare_text.py  debug_imports.py  debug_ocr.py  debug_surya.py  inspect_paddle.py  inspect_ppv3.py  save_page.py  test_basic.py  test_pipeline.py
